<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llyLoginPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mamorky.loginmio.MainActivity"
    android:padding="@dimen/llyPrincipalPadding"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txvSignInMargin"
        android:layout_weight="1"
        android:text="@string/txvSignIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse" />

    <TextView
        android:id="@+id/txvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txvUser"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edtUserMargin"
        android:layout_weight="1"
        android:background="@color/edtBackground"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txvPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edtPasswordMargin"
        android:layout_weight="1"
        android:background="@color/edtBackground"
        android:ems="10"
        android:inputType="textPersonName" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/llyRememberMargin">

        <CheckBox
            android:id="@+id/chkRememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/chkRemember"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txvSignUp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/btnSignInMargin"
        android:layout_weight="1"
        android:background="@color/btnFacebook"
        android:text="@string/btnSignIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/btnGoogle"
        android:text="@string/btnGoogle"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        android:layout_marginBottom="@dimen/btnGoogleMargin"/>

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/btnFacebook"
        android:text="@string/btnFacebook"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse" />
</LinearLayout>
